# Trabalhos-pr-ticos-de-AEDs-I

TP I/Código/: README.md  item_matriz.c  lista_de_voos.c  lista_de_voos.h  main.c  matriz_voos.c  matriz_voos.h  voo.c  voo.h
TP II/Código/: CMakeLists.txt  Caixeiro.c  Caixeiro.h  Caxeiro.c  Caxeiro.h  main.c  tes.txt
TP III/Código/: CMakeLists.txt  OldMain.c  Ordena.c  Ordena.h  Tempo.c  Tempo.h  main.c  matriz_voos.c  matriz_voos.h  random.c  random.h  voo.c  voo.h
